--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -1,7 +1,67 @@
 #header {
     background-color: #4b4b80;
-    padding: 3vh 3vw;
+    color: #cfcfcf;
+    padding: 3vw;
+    display: flex;
+    justify-content: space-between;
+}
+  
+#logo {
+    padding-left: 16px;
+    font-size: 1.5rem;
+    width: 80%;
+}
 
-    color: #ffffef;
-    font-size: 1.75rem;
+#menu {
+    width: 20%;
+    text-align: right;
+    padding-right: 8px;
+}
+
+nav#mobileNav {
+    background-color: white;
+}
+
+nav#desktopNav {
+    display: none;
+}
+
+header img {
+    width: 32px;
+    height: 32px;
+}
+
+nav#mobileNav a {
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    display: block;
+    padding: 10px 0;
+}
+
+@media (min-width: 992px) {
+    nav#mobileNav {
+        display: none;
+    }
+    #logo {
+        width: 30%;
+        font-size: 2.2rem;
+    }
+    #menu {
+        width: 70%;
+    }
+    #menu img {
+        display: none;
+    }
+    nav#desktopNav {
+        display: block;
+    }
+    nav#desktopNav a {
+        display: inline-block;
+        text-decoration: none;
+        color: white;
+        text-align: center;
+        margin: 0 1vw;
+        font-size: 1.3rem;
+    }
 }
