--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -1,8 +1,10 @@
 #header {
+    width: 100%;
     background-color: #4b4b80;
     color: #cfcfcf;
     padding: 3vw;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
   
