--- a/client/src/components/ReviewsSlider.module.css
+++ b/client/src/components/ReviewsSlider.module.css
@@ -1,4 +1,5 @@
 #userReviews {
+    width: 100%;
     background-color: #ededdd;
     padding: 4vw 0 0;
 
@@ -9,19 +10,28 @@
 #userReviews > span {
     display: block;
     text-align: center;
+    font-size: 1.1em;
 }
 
 #userReviews #main {
     display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 6vw;
 }
 
 #userReviews #main #left, #userReviews #main #right {
-    width: 10%
+    width: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 #userReviews #main button {
-    width: 100%;
-    min-height: 100%;
+    border: 1px solid #d0d0d0;
+    border-radius: 50%;
+    padding: 3vw;
 }
 
 #userReviews .review {
@@ -36,7 +46,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    object-fit: contain;
+    /* object-fit: contain; */
 }
 
 #userReviews .review div:first-child {
@@ -46,10 +56,40 @@
 
 #userReviews .review div:nth-child(2) {
     width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    justify-content: flex-start;
+    font-size: 0.9em;
+    color: #2d2d59;
 }
 
 #userReviews .review div:last-child {
     width: 100%;
     text-align: center;
+    font-size: 0.7em;
+    font-style: italic;
+    overflow-wrap: break-word;
     padding: 3vw;
+}
+
+@media (min-width: 992px) {
+
+    #userReviews > span {
+        font-size: 1.3em;
+    }
+
+    #userReviews #main button {
+        padding: 12px;
+    }
+
+    #userReviews .review img {
+        width: 80px;
+        height: 80px;
+    }
+
+    #userReviews .review div:last-child {
+        padding: 4vw 5vw;
+        font-size: 0.8em;
+    }
 }
