--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,8 +14,13 @@
 }
 
 body {
-  max-width: 100%;
+  width: 100%;
   background-color: #f5f5e6;
   margin: 0;
   padding: 0;
+  overflow-x: auto;
+}
+
+img {
+  max-width: 100%;
 }
