--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -11,7 +11,8 @@
 #joinInfo span {
     display: block;
     margin-top: 3px;
-    font-size: 1rem;
+    font-size: 0.7rem;
+    color: #505050;
 }
 
 #joinInfo button {
@@ -54,6 +55,9 @@
 @media (min-width: 992px) {
     #joinInfo button {
         width: 40%;
+    }
+    #joinInfo span {
+        font-size: 1rem;
     }
     #usersInfo span {
         font-size: 5vw;
