--- a/client/src/components/ReviewsSlider.module.css
+++ b/client/src/components/ReviewsSlider.module.css
@@ -1,16 +1,26 @@
 #userReviews {
     width: 100%;
     background-color: #ededdd;
-    padding: 4vw 0 0;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 4vw 0;
 
     font-size: 1.55rem;
-    word-spacing: 4px;
+    word-spacing: 2px;
 }
 
-#userReviews > span {
+#userReviews span {
+    width: 100%;
     display: block;
     text-align: center;
-    font-size: 1.1em;
+    font-size: 0.9em;
+    font-weight: bold;
+    color: #2f2f2f;
+    border-bottom: 1px solid #d0d0d0;
+    padding-bottom: 7px;
 }
 
 #userReviews #main {
@@ -29,7 +39,8 @@
 }
 
 #userReviews #main button {
-    border: 1px solid #d0d0d0;
+    background-color: #e1ebd3;
+    border: 1px solid #c4ccb8;
     border-radius: 50%;
     padding: 3vw;
 }
@@ -38,8 +49,6 @@
     width: 80%;
     display: flex;
     flex-wrap: wrap;
-
-    border-bottom: 1px solid gray;
 }
 
 #userReviews .review img {
@@ -74,8 +83,19 @@
 }
 
 @media (min-width: 992px) {
+    #userReviews {
+        padding-bottom: 0;
+    }
 
-    #userReviews > span {
+    #userReviews > div {
+        width: 70%;
+    }
+    
+    #userReviews #main {
+        margin-top: 4vw;
+    }
+
+    #userReviews span {
         font-size: 1.3em;
     }
 
