Made some edits to styling

--- a/client/src/pages/Dashboard/DashboardHeader.module.css
+++ b/client/src/pages/Dashboard/DashboardHeader.module.css
@@ -1,7 +1,7 @@
 #header {
     display: flex;
     flex-wrap: wrap;
-    background-color: #e6e6ca;
+    background-color: #6363a6;
     padding: 4vw 5vw;
 
     font-size: 1.45rem;
@@ -11,7 +11,7 @@
 
 #header #logo {
     padding-left: 16px;
-    color: #4b4b80;
+    color: #e0e0e0;
     font-size: 1.9rem;
     width: 40%;
 }
@@ -26,19 +26,19 @@
 }
 
 #header button {
-    background-color: #e6b8b8;
-    padding: 8px;
+    background-color: #957acc;
+    padding: 4px 8px;
     border: 1px solid #ad8b8b;
     border-radius: 8px;
-    color: #6a6a6a;
+    color: #eee;
 }
 
 #loginInfo {
-    /* background-color: gray; */
-    padding: 4px;
+    background-color: #f2f2da;
+    padding: 8px 4px 4px;
     margin-right: 8px;
     text-align: right;
-    color: #909090;
+    color: #1f1f1f;
     font-size: 0.7em;
 }
 
@@ -46,7 +46,7 @@
     #header > div:last-child > span {
         display: inline-block;
         margin-right: 8px;
-        color: #7e7e7e;
+        color: #ccc;
         font-size: 0.7em;
     }
 
