--- a/client/src/pages/Auth/AuthForm.module.css
+++ b/client/src/pages/Auth/AuthForm.module.css
@@ -1,7 +1,7 @@
 #main {
-    /* background-color: #ffffef; */
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+    margin: 0 auto;
 
     display: flex;
     flex-wrap: wrap;
@@ -20,8 +20,8 @@
 
 
 #formDiv {
-    /* background-color: #ffffef; */
     width: 90%;
+    padding: 2vw 0;
 
     border-radius: 10px;
     box-shadow: 2px 2px 2px 2px gray;
@@ -42,16 +42,14 @@
 }
 
 .inputDiv input {
+    background-color: #f5f5eb;
     width: 90%;
-    padding: 1vh 2vw;
+    padding: 5px 6px;
+    color: #888;
 
-    border: 1px inset gray;
+    border: 1px solid gray;
     border-radius: 5px;
     outline: none;
-}
-
-.inputDiv input:hover {
-    background-color: #f5f5f5;
 }
 
 #formDiv button {
@@ -65,5 +63,22 @@
     color: white;
     font-size: 1.38rem;
 
+    border: 1px solid #313159;
     border-radius: 10px;
+}
+
+@media (min-width: 992px) {
+    #main {
+        width: 60%;
+    }
+    .inputDiv input {
+        width: 70%;
+        text-indent: 6px;
+        letter-spacing: 1px;
+        margin-left: 5px;
+    }
+    #formDiv button {
+        width: 70%;
+        margin-top: 20px;
+    }
 }
