--- a/client/src/pages/Dashboard/Dashboard.module.css
+++ b/client/src/pages/Dashboard/Dashboard.module.css
@@ -1,9 +1,9 @@
 #userSummary {
-    background-color: #f7f7e6;
+    background-color: #f2f2da;
     display: flex;
     flex-wrap: wrap;
     padding: 3vh 0;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #c0c0c0;
 }
 
 #userSummary > div {
@@ -19,23 +19,24 @@
 
 #userSummary > div:last-child {
     width: 100%;
-    padding: 0 5vw 3vw 0;
+    padding: 0 6vw 3vw 0;
     text-align: right;
 }
 
 #userSummary button {
     padding: 10px 25px;
-    background-color: #7c7ca6;
-    color: white;
+    background-color: #7e9963;
+    color: #eee;
     font-size: large;
-    border: none;
+    border: 1px solid #3b472e;
     border-radius: 10px;
 }
 
 #referralLinks {
-    background-color: #f2f2df;
+    background-color: #e9ebd3;
     padding: 4vh;
-    border-bottom: 1px solid gray;
+    margin-bottom: 1px;
+    border-bottom: 1px solid #c0c0c0;
 }
 
 #referralLinks #heading {
@@ -47,7 +48,7 @@
 #referralLinks .label {
     display: block;
     margin: 8px auto;
-    color: #5c5c99;
+    color: #3d3d66;
 }
 
 #referralLinks input {
