--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -1,7 +1,21 @@
+#ownership {
+    /* background-color: rgb(85, 197, 85); */
+    background-color: #4b4b80;
+    color: #bbb;
+    text-align: right;
+    padding: 6px 8px;
+    font-size: 0.8em;
+}
+
+#ownership a {
+    text-decoration: none;
+    color: rgb(33, 169, 33);
+}
+
 #header {
     width: 100%;
     background-color: #4b4b80;
-    color: #cfcfcf;
+    color: white;
     padding: 3vw;
     display: flex;
     flex-wrap: wrap;
